# work_assistant

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  Makefile  Plan.md  README.md  SETUP.md  analyze_storage.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enhanced_scanning.py  003_project_graphs.py  004_chat_messages.py  005_conversations.py  006_hierarchical_jobs.py
docs/: hierarchical_job_design.md
tests/: test_journal_tools.py  test_project_tools.py
workassistant/: cli.py  config.py  database.py  logging_config.py  main.py
workassistant/api/: graph_routes.py  scan_routes.py
workassistant/jobs/: project_scan_job_manager.py  scan_job_manager.py  websocket_manager.py
workassistant/models/: __init__.py  ai_api_call.py  base.py  chat_message.py  commit_sha_registry.py  commit_summary.py  conversation.py  file_index.py  journal_entry.py  project.py  project_graph.py  project_location.py  project_scan_job.py  scan_checkpoint.py  scan_job.py
workassistant/scanning/: change_detector.py  checkpoint_manager.py  commit_summarizer.py  coordinator.py  git_helpers.py  graph_builder.py  journal_generator.py  progress_tracker.py  project_processor.py  scanner.py
workassistant/static/: styles.css
workassistant/tools/: cost_tools.py  graph_tools.py  journal_tools.py  lightweight_scan_tools.py  log_tools.py  project_tools.py  quick_query_tools.py
