[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workassistant"
version = "0.1.0"
description = "Personal AI work assistant with project tracking and journaling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno[os]>=0.1.0",
    "openai>=1.0.0",
    "gitpython>=3.1.40",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "uvicorn[standard]>=0.24.0",
    "fastapi>=0.109.0",
    "websockets>=12.0",
    "psycopg2-binary>=2.9.9",
    "graphifyy>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
workassistant-cli = "workassistant.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["workassistant*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
